--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -49,6 +49,9 @@
       {% if author.twitter %}
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
+      {% if author.x %}
+        <li><a href="https://x.com/{{ author.twitter }}"><i class="fab fa-fw fa-x-square" aria-hidden="true"></i> X</a></li>
+      {% endif %}
       {% if author.github %}
         <li><a href="https://github.com/{{ author.github }}"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github</a></li>
       {% endif %}
