--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -46,15 +46,22 @@
       {% if author.linkedin %}
         <li><a href="https://www.linkedin.com/in/{{ author.linkedin }}"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
       {% endif %}
+
       {% if author.twitter %}
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
       {% if author.x %}
-        <li><a href="https://x.com/{{ author.twitter }}"><i class="fab fa-fw fa-x-square" aria-hidden="true"></i> X</a></li>
+        <li><a href="https://x.com/{{ author.x }}"><i class="fab fa-fw x-twitter" aria-hidden="true"></i> X</a></li>
       {% endif %}
+
+
+
       {% if author.github %}
         <li><a href="https://github.com/{{ author.github }}"><i class="fab fa-fw fa-github" aria-hidden="true"></i> Github</a></li>
       {% endif %}
+
+
+
       {% if author.keybase %}
         <li><a href="https://keybase.io/{{ author.keybase }}"><i class="fas fa-fw fa-key" aria-hidden="true"></i> Keybase</a></li>
       {% endif %}
