--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -50,8 +50,8 @@
       {% if author.twitter %}
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
-      {% if author.x %}
-        <li><a href="https://x.com/{{ author.x }}"><i class="fab fa-fw fa-x" aria-hidden="true"></i> X</a></li>
+      {% if author.x-twitter %}
+        <li><a href="https://x.com/{{ author.x }}"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i> X</a></li>
       {% endif %}
 
 
