--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -51,7 +51,7 @@
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
       {% if author.x %}
-        <li><a href="https://x.com/{{ author.x }}"><i class="fab fa-x-twitter" aria-hidden="true"></i> X</a></li>
+        <li><a href="https://x.com/{{ author.x }}"><i class="fab fa-fw fa-x-twitter" aria-hidden="true"></i> X</a></li>
       {% endif %}
 
 
